--- a/Project/styles.css
+++ b/Project/styles.css
@@ -7,21 +7,52 @@
   border-bottom: 1px solid #d8d8d8;
   height: 70px;
 }
+.center-buttons{
+  display: inline-block;
+  width: 300px;
+  margin: auto;
+  position: absolute;
+  top: 30px;
+  left: 33%;
+}
 
-.obj{
-  border: 1px solid black;
-  color: white;
+.center-buttons-obj{
+  border: 1px solid #d8d8d8;
+  border-radius: 3px;
+  color: black;
   padding: 3px;
   text-align: center;
-  border-radius: 3px;
+  text-decoration: none;
+}
+
+.center-buttons-obj:hover{
+  background-color: #001f3f;
+  color: white;
+}
+
+.center-buttons-obj:active{
+  background-color: red;
+  text-decoration: none;
 }
 
 .survey-button{
-  border: 1px solid black;
+  border: 1px solid #d8d8d8;
   color: black;
   border-radius: 3px;
   padding: 3px;
   margin-right: 20px;
+  text-decoration: none;
+}
+
+.survey-button:hover{
+  background-color: #001f3f;
+  color: white;
+  text-decoration: none;
+}
+
+.survey-button:active{
+  background-color: red;
+  color: white;
 }
 
 .logIn-button{
@@ -30,66 +61,92 @@
   padding: 0px 20px;
   background-color: white;
   border: none;
-  border-left: 1px solid black;
+  border-left: 1px solid #d8d8d8;
   
+}
+
+.logIn-button:hover{
+  background-color: #001f3f;
+  color: white;
+}
+
+.logIn-button:active{
+  background-color: red;
+  color: white;
 }
 
 .headerCls .image{
   padding: 5px;
-  margin:10px 10px;
-  
-  
-}
-
-a:link{
-  color: black;
-  text-decoration: none;
-}
-
-li a:hover{
-  background-color: blue;
-  
-  text-decoration: underline;
-}
-
-a:visited{
-  color: black;
-  text-decoration: none;
-}
-
-a:active{
-  color: red;
-  text-decoration: none;
-}
-
-.menuList{
-  list-style-type: none;
-  image: 0 auto;
-}
-
-li{
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-  border-radius: 3px;
-  top: -50px;
-}
-
-.center-buttons{
-    display: block;
-    width: 300px;
-    margin: auto;
-    position: absolute;
-    top: 30px;
-    left: 33%;
+  margin:10px 10px;  
 }
 
 .right-buttons{
-    float: right;
+  float: right;
+}
+
+.left-buttons{
+  display: inline-block;
+  width: 300px;
+  margin: auto;
+  position: absolute;
+  top: 30px;
+  left: 5%;
+}
+
+.home-button{
+  border: 1px solid #d8d8d8;
+  color: black;
+  border-radius: 3px;
+  padding: 3px;
+  margin-right: 20px;
+  text-decoration: none;
+}
+
+.home-button:hover, .about-button:hover{
+  background-color: #001f3f;
+  color: white;
+}
+
+.about-button{
+    border: 1px solid #d8d8d8;
+    color: black;
+    border-radius: 3px;
+    padding: 3px;
+    margin-right: 20px;
+    text-decoration: none;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a{
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover{
+  background-color: #001f3f;
+  color: white;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.page-description{
+  text-align: center;
+  top: 35%;
 }
