--- a/Project/stylesRegister.css
+++ b/Project/stylesRegister.css
@@ -74,6 +74,19 @@ body{
     user-select:none;
 }
 
+@media only screen and (max-width:900px){
+    .register{
+      margin-top: 2%;
+      margin-left:1%;
+      margin-right:1%;
+      width: 290px;
+      height:480px;
+    }
+    .sigla{
+      margin-left: 79%;
+      width: 90px;
+  }
+   }
 
 
 
