Pagina add_survey, modificare pagina login,register,about, redenumire css-uri

--- a/Project/profileStyle.css
+++ b/Project/profileStyle.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("public/fon_svet_polosy_pyatna_odnotonnyy_43981_1600x900.jpg");
+    background-color:#03A9F4;
     background-size:cover;
     font-family: 'Open Sans', sans-serif;
 }
