--- a/Project/indexStyle.css
+++ b/Project/indexStyle.css
@@ -1,3 +1,8 @@
+body{
+    background: #03A9F4;
+}
+
+
 .headerCls {
     width: 100%;
     background-color: white;
@@ -149,6 +154,7 @@
 .page-description {
     text-align: center;
     top: 35%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .ion {
