--- a/Project/loginStyle.css
+++ b/Project/loginStyle.css
@@ -31,12 +31,13 @@ body{
 
   .log-in-text{
     font-size:40px;
-    color:navy;
+    color:rgb(0, 57, 104);
   }
 
   .login-submit{
       border:none;
-      background-color:navy;
+      border-radius:7px;
+      background-color:#2196F3;
       color:white;
       padding: 15px 32px;
       display: inline-block;
@@ -65,7 +66,7 @@ body{
   .login-submit:hover {
   border:none;
   text-shadow: 0 1px grey;
-  background-color: rgb(8, 8, 165);
+  background-color: rgb(25, 130, 216);
   }
 
   @media only screen and (max-width:900px){
