--- a/Project/registerStyle.css
+++ b/Project/registerStyle.css
@@ -25,14 +25,15 @@ body{
 
 .register-text{
     font-size:40px;
-    color:navy;
+    color:rgb(0, 57, 104);
 }
 
 
 
 .cancel-button , .signup-button{
-    background-color:navy;
-    border: none;
+    background-color:#2196F3;
+    border: 0;
+    border-radius:7px;
     color:white;
     padding: 15px 32px;
     display: inline-block;
@@ -42,7 +43,7 @@ body{
 .cancel-button:hover  , .signup-button:hover {
     border: 0px;
     text-shadow: 0 1px grey;
-    background-color: rgb(8, 8, 165);
+    background-color: rgb(25, 130, 216);
     }
 
 .register-form-content input[type=text], input[type=password] {
@@ -65,7 +66,7 @@ body{
     } 
 
 .check-button{
-    background-color:blue;
+    background-color:#2196F3;
 }
 
 .checkmark{
