--- a/Project/surveyFormStyle.css
+++ b/Project/surveyFormStyle.css
@@ -2,3 +2,59 @@
     height: 200px;
     width: 300px;
 }
+
+body{
+    background:#03A9F4 no-repeat center fixed;
+    background-size:cover;
+    font-family: 'Open Sans', sans-serif;
+}
+
+form{
+        background:#3F51B5;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 40%;
+        border-radius:10px;
+}
+
+p{
+    margin-left:20%;
+}
+
+form input[type=text] {
+    margin-left:20%;
+    margin-top:5%;
+    height: 25px;
+    font-size: 16px;
+    margin-bottom: 5%;
+    background: white;
+    border: 1px solid black;
+    border-top: 1px solid grey;
+    padding: 0 8px;
+}
+
+form input[type=text]:hover {
+    border: 1px solid black;
+    border-top: 1px solid grey;
+    -moz-box-shadow:inset 0 0 5px white;
+    -webkit-box-shadow: inset 0 0 5px black;
+    box-shadow:  inset 0 0 2px grey;
+} 
+
+.submit{
+    background-color:#2196F3;
+    border: 0;
+    border-radius:7px;
+    color:white;
+    padding: 15px 32px;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom:10%;
+    margin-left:35%;
+}
+
+.submit:hover{
+    border: 0px;
+    text-shadow: 0 1px grey;
+    background-color: rgb(25, 130, 216);
+}
