--- a/Project/surveyFormStyle.css
+++ b/Project/surveyFormStyle.css
@@ -20,6 +20,17 @@ form{
 p{
     margin-left:20%;
 }
+textarea{
+    margin-left:20%;
+    margin-top:5%;
+    height: 25px;
+    font-size: 16px;
+    margin-bottom: 5%;
+    background: white;
+    border: 1px solid black;
+    border-top: 1px solid grey;
+    padding: 0 8px;
+}
 
 form input[type=text] {
     margin-left:20%;
@@ -58,3 +69,11 @@ form input[type=text]:hover {
     text-shadow: 0 1px grey;
     background-color: rgb(25, 130, 216);
 }
+
+@media only screen and (max-width:900px){
+    form{
+        width:100%;
+        margin-left:1%;
+        margin-right:1%;
+    }
+   }
