Small redesign, and added modals, for cards made by rafa and andrei

--- a/Project/surveyFormStyle.css
+++ b/Project/surveyFormStyle.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background:#03A9F4 no-repeat center fixed;
+    background:#A9CAD8 no-repeat center fixed;
     background-size:cover;
     font-family: 'Open Sans', sans-serif;
 }
