--- a/Project/indexStyle.css
+++ b/Project/indexStyle.css
@@ -1,12 +1,14 @@
 body{
-    background: #03A9F4;
+    width: 100%;
+    height: 100%;
+    background: #DAEAF1;
+    margin: 0;
 }
 
 
 .headerCls {
     width: 100%;
     background-color: white;
-    position: fixed;
     left: 0;
     top: 0;
     border-bottom: 1px solid #d8d8d8;
@@ -288,4 +290,39 @@ label{
         background-color: white;
         border: none;
     }
+}
+
+.page{
+    width: 100%;
+    height: 100%;
+}
+.container{
+    position: fixed;
+    top: 71px;
+    width: 70%;
+    height: 100%;
+    margin-left: 15%;
+    background: #A9CAD8;
+    overflow-x: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 2px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #07445E; 
+    border-radius: 10px;
+}   
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #00070A; 
 }
