--- a/Project/profileStyle.css
+++ b/Project/profileStyle.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#03A9F4;
+    background-color:#A9CAD8;
     background-size:cover;
     font-family: 'Open Sans', sans-serif;
 }
