--- a/ACAR/public/registerStyle.css
+++ b/ACAR/public/registerStyle.css
@@ -11,12 +11,13 @@ body{
 }
 
 .register{
-    margin-top: 10px;
-    margin-left:150px;
+    position: relative;
+    left:150px;
+    bottom:50px;
     border-radius:3px;
     padding: 50px;
     width: 300px;
-    height:480px;
+    height:550px;
     background-color: rgba(255, 255, 255, 0.55);
     border:1px;
     border-radius:8px;
@@ -87,7 +88,7 @@ body{
       margin-left: 79%;
       width: 90px;
   }
-   }
+}
 
 
 
