restiliizare in loc de survey cu review

--- a/ACAR/public/indexStyle.css
+++ b/ACAR/public/indexStyle.css
@@ -55,7 +55,7 @@ body{
 }
 
 .ion-chatbox-working:after {
-    content: "My Surveys";
+    content: "Add Review";
     color: black;
     padding-left: 5px;
 }
