--- a/ACAR/public/surveyFormStyle.css
+++ b/ACAR/public/surveyFormStyle.css
@@ -31,7 +31,10 @@ textarea{
     border-top: 1px solid grey;
     padding: 0 8px;
 }
-
+form [type=file]{
+    margin-left:20%;
+    margin-top:5%;
+}
 form input[type=text] {
     margin-left:20%;
     margin-top:5%;
