--- a/ACAR/public/surveyFormStyle.css
+++ b/ACAR/public/surveyFormStyle.css
@@ -45,6 +45,7 @@ form input[type=text] {
     border: 1px solid black;
     border-top: 1px solid grey;
     padding: 0 8px;
+    size:135;
 }
 
 form input[type=text]:hover {
